--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
     <title>Setroc</title>
-    <script type="module" crossorigin src="/portafolio/assets/index.26dbf3de.js"></script>
-    <link rel="stylesheet" href="/portafolio/assets/index.1e4559c8.css">
+    <script type="module" crossorigin src="/assets/index.26dbf3de.js"></script>
+    <link rel="stylesheet" href="/assets/index.1e4559c8.css">
   </head>
   <body>
     <div id="root"></div>
